# oref-digital-twin

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
diagnostics/: README.md  __init__.py  glycemia.py  models.py  patterns.py  report.py  sanity.py  series.py
diagnostics/tests/: test_glycemia_sanity.py  test_patterns.py  test_report.py
docs/: README.md
ingestion/: README.md  __init__.py  cli.py  client.py  config.py  coverage.py  models.py  normalise.py  pull.py
ingestion/tests/: fixtures.py  test_client.py  test_coverage.py  test_normalise.py
replay/: README.md  __init__.py  counterfactual.py  inputs.py  oracle_bridge.py  settings_delta.py
replay/oracle/: browser-entry.mjs  determine.js  package-lock.json  package.json
replay/tests/: test_counterfactual.py  test_inputs.py  test_oracle_integration.py  test_settings_delta.py
report/: __init__.py  browser.py  grounding.py  template.py
report/tests/: test_browser.py  test_grounding.py  test_template.py
settings/: README.md  __init__.py  extract.py  schema.py  validate.py
settings/decrypt/: README.md  aaps_prefs.mjs  roundtrip.test.mjs
settings/tests/: test_decrypt_js.py  test_extract.py  test_schema_validate.py
variant/: README.md  __init__.py  detect.py  signals.py
variant/tests/: test_detect.py
web/: README.md  app.js  build-oref.sh  build.sh  config.js  index.html  oref-bundle.js  settings.js
worker/: README.md  package.json  worker.js  wrangler.toml
